# chip8-rust

./: Cargo.toml  readme.md
src/: chip8.rs  execute.rs  font.rs  lib.rs  main.rs  nibble.rs  opcode.rs  runner.rs  types.rs
src/chip8/: chip8.rs  execute.rs  opcode.rs  runner.rs  types.rs
src/debugger/: commands.rs  executor.rs  mod.rs
src/emu/: chip8.rs  execute.rs  mod.rs  opcode.rs  runner.rs  types.rs
